# RAG-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT.md  E2E_TESTING.md  ISSUE_66_IMPLEMENTATION.md  Makefile  README.md  playwright.config.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  streamlit_app.py  streamlit_app_simple.py  test-gemini-api.sh  test_app.py
.claude/: mcp.json
.github/: REVIEW_TEMPLATE.md  pull_request_template.md
.github/scripts/: create-features.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  e2e-tests.yml  epic-to-features.yml  gemini-code-review.yml  test-gemini-api.yml  test.yml
.streamlit/: config.toml  secrets.toml.example
components/: __init__.py  chat_interface.py  citation_display.py  document_manager.py  pdf_uploader.py
database/: README.md  create_tables.sql
docs/: README.md  ROADMAP.md  gemini-cli-review.md  vector_storage_api.md
e2e/: .gitignore  README.md
e2e/docs/: E2E_TEST_GUIDE.md
e2e/fixtures/: generate_sample.py
e2e/scripts/: clean_results.sh  run_e2e.sh  setup_e2e.sh
models/: __init__.py  chat.py  citation.py  document.py  embedding.py
scripts/: run-e2e-tests.sh  setup-e2e-environment.sh
services/: __init__.py  citation_service.py  claude_llm.py  code_quality_issues.py  database_manager.py  embeddings.py  insecure_service.py  pdf_processor.py  performance_issues.py  system_monitoring.py  text_chunker.py  vector_similarity_search.py  vector_storage.py  vector_store.py
tests/: README.md  __init__.py  conftest.py  test_models.py  test_pdf_processor.py  test_performance.py  test_tdd_setup.py  test_vector_store.py
tests/e2e/: conftest.py  test_chat_interface.py  test_document_management.py  test_integration_workflow.py  test_pdf_upload.py
tests/e2e/pages/: base_page.py  chat_page.py  document_management_page.py  pdf_upload_page.py
tests/e2e/utils/: pdf_generator.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_api_integration.py  test_claude_integration.py  test_database_integration.py  test_embeddings_integration.py  test_full_pipeline.py  test_token_consistency.py  test_vector_storage_integration.py  test_vector_store_integration.py
tests/performance/: __init__.py  test_embedding_performance.py  test_load_performance.py
tests/unit/: __init__.py  test_batch_processor.py  test_citation_display.py  test_claude_llm.py  test_claude_service.py  test_claude_streaming.py  test_database_manager.py  test_document_structure.py  test_embeddings.py  test_pdf_processor.py  test_pdf_processor_complete.py  test_prompt_template_manager.py  test_security_vector_storage.py  test_system_monitoring.py  test_text_chunker.py  test_vector_similarity_search.py  test_vector_storage.py  test_vector_store.py  test_vector_store_comprehensive.py  test_vector_store_green.py  test_vector_store_performance.py
tests/unit/components/: test_chat_interface.py  test_chat_interface_simple.py  test_citation_display.py
tests/unit/models/: test_chat.py  test_embedding.py
tests/unit/utils/: test_streamlit_helpers.py
tests/utils/: __init__.py  test_helpers.py
utils/: __init__.py  batch_processor.py  config.py  error_handler.py  prompt_templates.py  streamlit_helpers.py  tokenizer.py
