# Setup Configuration for RAG Demo Project
# 新入社員向け社内文書検索RAGアプリケーション

[metadata]
name = rag-demo
version = 0.1.0
description = 新入社員向け社内文書検索RAGアプリケーション
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moma1992/RAG-demo
author = RAG Demo Team
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.11
packages = find:
include_package_data = True

[options.packages.find]
exclude =
    tests*
    docs*

# Flake8 Configuration (Legacy support)
[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501
max-complexity = 10
select = C,E,F,W,B,B950
ignore = E203,E501,W503,D100,D101,D102,D103,D104,D105,D106,D107
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .tox,
    .mypy_cache,
    .pytest_cache,
    docs

# Coverage Configuration (Legacy support)
[coverage:run]
source = ., components, services, utils, models
omit =
    tests/*
    */test_*
    */__pycache__/*
    */.*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

# Tool Configuration for IDE Support
[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --disable-warnings
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests  
    unit: marks tests as unit tests

[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-streamlit.*]
ignore_missing_imports = True

[mypy-langchain.*]
ignore_missing_imports = True

[mypy-supabase.*]
ignore_missing_imports = True

[mypy-fitz.*]
ignore_missing_imports = True

[mypy-spacy.*]
ignore_missing_imports = True